# esp32c3_lvgl-sensor

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: Flash_Access.h.2957E7906987A821.idx  FreeRTOS.h.0A0C9C1C09C2C555.idx  FreeRTOSConfig.h.50D7873AE4B81347.idx  FreeRTOSConfig_arch.h.50435F96FB1D47F6.idx  (+3299 more)
components/ath20/: CMakeLists.txt  ath20.c  ath20.h
components/bh1750/: CMakeLists.txt  bh1750.c  bh1750.h
components/blufi/: CMakeLists.txt  blufi_init.c  blufi_main.c  blufi_main.h  blufi_security.c
components/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h
components/gui/: CMakeLists.txt  component.mk  gui.h
components/gui/images/: appicon.c  home.c
components/gui/images/icon32x32/: lighting32x32.c  qiya32x32.c  shidu32x32.c  tempture32x32.c
components/gui/images/icon48x48/: lighting.c  qiya.c  setting.c  shidu.c  tempture.c
components/gui/images/wallpaper/: wallpaper1.c  wallpaper10.c  wallpaper2.c  wallpaper3.c  wallpaper4.c  wallpaper5.c  wallpaper6.c  wallpaper7.c  wallpaper8.c  wallpaper9.c  wallpaperbar.c
components/gui/ui/: chart_temp.c  desktop.c  home_page.c  setting.c
components/i2c_common/: CMakeLists.txt  i2c_common.c  i2c_common.h
components/lv_port/: CMakeLists.txt  component.mk
components/lv_port/lv_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c  lv_port_indev.h  sd_card.c  sd_card.h
components/mqtt_server/: CMakeLists.txt  mqtt.c  mqtt.h
components/temt6000/: CMakeLists.txt  temt6000.c  temt6000.h
main/: Kconfig.projbuild  main.c
